--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Home</li>
         <li>Bolg</li>
         <li>Content Us</li>
+        <li>About As</li>
       </ul>
     </div>
     <div id="section1">
