--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Home</li>
         <li>Bolg</li>
         <li>Content Us</li>
-        <li>About As</li>
+        <li>About Us</li>
       </ul>
     </div>
     <div id="section1">
@@ -77,16 +77,35 @@
     </div>
 
     <div id="section6">
-      <div class="image"><img src="firstImage.jpg" alt="image1" /></div>
-      <div class="image"><img src="firstImage.jpg" alt="image2" /></div>
-      <div class="image"><img src="firstImage.jpg" alt="image3" /></div>
+      <div class="image11">
+        <img src="workspaceCopy2.png" alt="thirdImage" />
+        <h2>The power of open work <br />space</h2>
+      </div>
+
+      <div class="image11">
+        <img src="workspaceCopy1.png" alt="thirdImage" />
+        <h2>
+          How to create synergy in<br />
+          the workplace
+        </h2>
+      </div>
+
+      <div class="image11">
+        <img src="workspaceCopy.jpg" alt="thirdImage" />
+        <h2>
+          Brainstorm how-to: the<br />
+          wall of ideas
+        </h2>
+      </div>
     </div>
 
     <div id="footer">
       <ul>
-        <a class="fab fa-twitter"></a>
+        <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+        <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
       </ul>
-      ©2020 by ReelTech. Proudly created with Wix.com
+      <p>©2020 by ReelTech. Proudly created with Wix.com</p>
     </div>
   </body>
 </html>
