created first blog page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home|RealTech</title>
-    <link rel="stylesheet" href="RealTech.css" />
+    <link rel="stylesheet" href="allCss/RealTech.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="header">
-      <img src="logo.gif" alt="logo" />
+      <img src="assets/logo.gif" alt="logo" />
       <ul>
         <li>Home</li>
         <li>Bolg</li>
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div id="section1">
-      <img src="section1img.jpg" alt="section1img" />
+      <img src="assets/section1img.jpg" alt="section1img" />
     </div>
     <div id="section2">
       <h1>WELCOME TO <br />REALTECH</h1>
@@ -30,7 +30,7 @@
     <div id="section3">
       <div id="tableRow">
         <div id="RightColumn">
-          <img src="firstImage.jpg" alt="imagerightcloumn" />
+          <img src="assets/firstImage.jpg" alt="imagerightcloumn" />
         </div>
         <div id="LeftColumn">
           <h1>OUR TECHNOLOGY</h1>
@@ -48,19 +48,19 @@
     <div id="section4">
       <h1>Upcoming Events</h1>
       <div class="card1">
-        <img src="image1.jpg" alt="firstImage" />
+        <img src="assets/image1.jpg" alt="firstImage" />
         <h2>Event</h2>
         <h3>San Francisco, CA, USA</h3>
         <button>RSVP</button>
       </div>
       <div class="card1">
-        <img src="image1.jpg" alt="secondImage" />
+        <img src="assets/image1.jpg" alt="secondImage" />
         <h2>Event</h2>
         <h3>San Francisco, CA, USA</h3>
         <button>RSVP</button>
       </div>
       <div class="card1">
-        <img src="image1.jpg" alt="thirdImage" />
+        <img src="assets/image1.jpg" alt="thirdImage" />
         <h2>Event</h2>
         <h3>San Francisco, CA, USA</h3>
         <button>RSVP</button>
@@ -78,12 +78,12 @@
 
     <div id="section6">
       <div class="image11">
-        <img src="workspaceCopy2.png" alt="thirdImage" />
+        <img src="assets/workspaceCopy2.png" alt="thirdImage" />
         <h2>The power of open work <br />space</h2>
       </div>
 
       <div class="image11">
-        <img src="workspaceCopy1.png" alt="thirdImage" />
+        <img src="assets/workspaceCopy1.png" alt="thirdImage" />
         <h2>
           How to create synergy in<br />
           the workplace
@@ -91,7 +91,7 @@
       </div>
 
       <div class="image11">
-        <img src="workspaceCopy.jpg" alt="thirdImage" />
+        <img src="assets/workspaceCopy.jpg" alt="thirdImage" />
         <h2>
           Brainstorm how-to: the<br />
           wall of ideas
@@ -105,7 +105,7 @@
         <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
         <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
       </ul>
-      <p>©2020 by ReelTech. Proudly created with Wix.com</p>
+      <p>©2020 by ReelTech. Proudly created by Halima</p>
     </div>
   </body>
 </html>
