--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog page</title>
-    <link rel="stylesheet" href="Blog.css" />
+    <link rel="stylesheet" href="allCss/Blog.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="header">
-      <img src="logo.gif" alt="logo" />
+      <img src="assets/logo.gif" alt="logo" />
       <ul>
         <li>Home</li>
         <li>Bolg</li>
@@ -24,7 +24,7 @@
     <div id="blog">
       <div id="tableRow">
         <div id="LeftColumn">
-          <img src="workspace1.jpg" alt="imagerightcloumn" />
+          <img src="assets/workspace1.jpg" alt="imagerightcloumn" />
         </div>
         <div id="RightColumn">
           <h1>The power of open work space</h1>
@@ -40,7 +40,7 @@
     <div id="blog">
       <div id="tableRow">
         <div id="LeftColumn">
-          <img src="workspace2.jpg" alt="imagerightcloumn" />
+          <img src="assets/workspace2.jpg" alt="imagerightcloumn" />
         </div>
         <div id="RightColumn">
           <h1>How to create synergy in the workplace</h1>
@@ -56,7 +56,7 @@
     <div id="blog">
       <div id="tableRow">
         <div id="LeftColumn">
-          <img src="workspace.jpg" alt="imagerightcloumn" />
+          <img src="assets/workspace.jpg" alt="imagerightcloumn" />
         </div>
         <div id="RightColumn">
           <h1>Brainstorm how-to: the wall of ideas</h1>
@@ -74,7 +74,7 @@
         <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
         <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
       </ul>
-      <p>©2020 by ReelTech. Proudly created with Wix.com</p>
+      <p>©2020 by ReelTech. Proudly created by Halima</p>
     </div>
   </body>
 </html>
