fixed the issues

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <div id="header">
       <img src="assets/logo.gif" alt="logo" />
       <ul>
-        <li>Home</li>
+        <li><a href="index.html">Home</a></li>
         <li>Bolg</li>
         <li>Content Us</li>
         <li>About Us</li>
@@ -27,7 +27,7 @@
           <img src="assets/workspace1.jpg" alt="imagerightcloumn" />
         </div>
         <div id="RightColumn">
-          <h1>The power of open work space</h1>
+          <h1><a href="firstblog.html">The power of open work space</a></h1>
           <p>
             This is your blog post. Great looking images make your blog posts
             more visually compelling for your audience, so choose media that
