--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <img src="assets/logo.gif" alt="logo" />
       <ul>
         <li>Home</li>
-        <li>Bolg</li>
+        <li>
+          <a href="blog.html">Blog</a>
+        </li>
         <li>Content Us</li>
         <li>About Us</li>
       </ul>
