--- a/firstblog.html
+++ b/firstblog.html
@@ -15,8 +15,8 @@
     <div id="header">
       <img src="assets/logo.gif" alt="logo" />
       <ul>
-        <li>Home</li>
-        <li>Bolg</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li>Content Us</li>
         <li>About Us</li>
       </ul>
