fixed all the issue

--- a/CMS/createBlog.html
+++ b/CMS/createBlog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EditEvent</title>
-    <link rel="stylesheet" href="allCss/createBlog.css" />
+    <title>CreateBlog</title>
+    <link rel="stylesheet" href="../allCss/createBlog.css" />
   </head>
   <body>
     <div id="tableContainer">
@@ -13,15 +13,15 @@
           <h2>Blog Events</h2>
         </div>
         <div id="RightColumn">
-          <h2>Event</h2>
+          <h2>Blog</h2>
           <input type="title" placeholder="Title" />
           <input
             class="description"
             type="Des"
-            placeholder="Event description... "
+            placeholder="Blog description... "
           />
           <input type="img" placeholder="Image URL" />
-          <button class="addbu">Edit</button>
+          <button class="addbu">Add</button>
           <button class="cancelbu">Cancel</button>
         </div>
       </div>
