--- a/CMS/events.html
+++ b/CMS/events.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=div, initial-scale=1.0" />
-    <link rel="stylesheet" href="allCss/admin.css" />
-    <title>AdminPage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>adminEvents</title>
+    <link rel="stylesheet" href="../allCss/admin.css" />
   </head>
   <body>
     <div id="TableContainer">
@@ -13,12 +13,12 @@
           <h2>Blog Events</h2>
         </div>
         <div id="RightColumn">
-          <button class="mainbutton">NEW BLOG</button>
-          <h2>Blogs</h2>
+          <button class="mainbutton">NEW EVENT</button>
+          <h2>Events</h2>
 
           <!-- <div id="titel"> -->
           <div class="part1">
-            <img src="assets/testimg.png" alt="imgtital" />
+            <img src="../assets/testimg.png" alt="imgtital" />
             <span>
               <h4>Title</h4>
               <p>Description of the Post</p>
@@ -29,7 +29,7 @@
           </div>
 
           <div class="part1">
-            <img src="assets/testimg.png" alt="imgtital" />
+            <img src="../assets/testimg.png" alt="imgtital" />
             <span>
               <h4>Title</h4>
               <p>Description of the Post</p>
@@ -40,7 +40,7 @@
           </div>
 
           <div class="part1">
-            <img src="assets/testimg.png" alt="imgtital" />
+            <img src="../assets/testimg.png" alt="imgtital" />
             <span>
               <h4>Title</h4>
               <p>Description of the Post</p>
