--- a/CMS/createEvent.html
+++ b/CMS/createEvent.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CreateBlog</title>
-    <link rel="stylesheet" href="allCss/createBlog.css" />
+    <title>CreateEvent</title>
+    <link rel="stylesheet" href="../allCss/createBlog.css" />
   </head>
   <body>
     <div id="tableContainer">
@@ -13,12 +13,12 @@
           <h2>Blog Events</h2>
         </div>
         <div id="RightColumn">
-          <h2>Blog</h2>
+          <h2>Event</h2>
           <input type="title" placeholder="Title" />
           <input
             class="description"
             type="Des"
-            placeholder="Blog description... "
+            placeholder="Event description... "
           />
           <input type="img" placeholder="Image URL" />
           <button class="addbu">Add</button>
