--- a/CMS/createBlog.html
+++ b/CMS/createBlog.html
@@ -12,19 +12,17 @@
         <div id="LeftColumn">
           <h2>Blog Events</h2>
         </div>
+
         <div id="RightColumn">
           <h2>Blog</h2>
-          <input type="title" placeholder="Title" />
-          <input
-            class="description"
-            type="Des"
-            placeholder="Blog description... "
-          />
-          <input type="img" placeholder="Image URL" />
+          <input class="Title" type="title" placeholder="Title" />
+          <input class="Dess" type="Des" placeholder="Blog description... " />
+          <input class="Img" type="img" placeholder="Image URL" />
           <button class="addbu">Add</button>
           <button class="cancelbu">Cancel</button>
         </div>
       </div>
     </div>
+    <script src="addBlog.js"></script>
   </body>
 </html>
