--- a/CMS/admin.html
+++ b/CMS/admin.html
@@ -10,13 +10,14 @@
     <div id="TableContainer">
       <div id="tableRow">
         <div id="LeftColumn">
-          <h2>Blog Events</h2>
+          <h2 id="bloglink">Blog </h2>
+          <h2 id="blogevent">Events</h2>
         </div>
         <div id="RightColumn">
-          <button class="mainbutton">NEW BLOG</button>
+          <a href="createBlog.html"> <button class="mainbutton">NEW BLOG</button></a>
           <h2>Blogs</h2>
 
-          <!-- <div id="titel"> -->
+          <div id="blogList">
           <div class="part1">
             <img src="../assets/testimg.png" alt="imgtital" />
             <span>
@@ -52,5 +53,6 @@
         </div>
       </div>
     </div>
+    <script src="../index.js"></script>
   </body>
 </html>
