--- a/CMS/blogs.html
+++ b/CMS/blogs.html
@@ -10,7 +10,7 @@
     <div id="TableContainer">
       <div id="tableRow">
         <div id="LeftColumn">
-          <h2 id="bloglink">Blog </h2>
+          <h2 id="bloglink">Blogs </h2>
           <h2 id="blogevent">Events</h2>
         </div>
         <div id="RightColumn">
@@ -53,6 +53,6 @@
         </div>
       </div>
     </div>
-    <script src="../index.js"></script>
+    <script src="../jsFiles/index.js"></script>
   </body>
 </html>
