--- a/CMS/createBlog.html
+++ b/CMS/createBlog.html
@@ -23,6 +23,6 @@
         </div>
       </div>
     </div>
-    <script src="addBlog.js"></script>
+    <script src="../jsFiles/addBlog.js"></script>
   </body>
 </html>
