--- a/CMS/events.html
+++ b/CMS/events.html
@@ -10,13 +10,16 @@
     <div id="TableContainer">
       <div id="tableRow">
         <div id="LeftColumn">
-          <h2>Blog Events</h2>
+          <h2 id="bloglink">Blogs</h2>
+          <h2 id="blogevent">Events</h2>
         </div>
         <div id="RightColumn">
-          <button class="mainbutton">NEW EVENT</button>
+          <a href="createEvent.html"
+            ><button class="mainbutton">NEW EVENT</button></a
+          >
           <h2>Events</h2>
 
-          <!-- <div id="titel"> -->
+          <div id="eventList">
           <div class="part1">
             <img src="../assets/testimg.png" alt="imgtital" />
             <span>
@@ -52,5 +55,6 @@
         </div>
       </div>
     </div>
+    <script src="../jsFiles/indexE.js"></script>
   </body>
 </html>
