--- a/CMS/createEvent.html
+++ b/CMS/createEvent.html
@@ -14,17 +14,14 @@
         </div>
         <div id="RightColumn">
           <h2>Event</h2>
-          <input type="title" placeholder="Title" />
-          <input
-            class="description"
-            type="Des"
-            placeholder="Event description... "
-          />
-          <input type="img" placeholder="Image URL" />
+          <input class="Title" type="title" placeholder="Title" />
+          <input class="Dess" type="Des" placeholder="Event description... " />
+          <input class="Img" type="img" placeholder="Image URL" />
           <button class="addbu">Add</button>
           <button class="cancelbu">Cancel</button>
         </div>
       </div>
     </div>
+    <script src="../jsFiles/addEvent.js"></script>
   </body>
 </html>
