All the files until today!

--- a/CMS/blogs.html
+++ b/CMS/blogs.html
@@ -25,8 +25,8 @@
               <p>Description of the Post</p>
               <h5>Date</h5>
             </span>
-            <button>Edit</button>
-            <button>Delete</button>
+            <button id="editBu">Edit</button>
+            <button id="deleteBu">Delete</button>
           </div>
 
           <div class="part1">
@@ -36,8 +36,8 @@
               <p>Description of the Post</p>
               <h5>Date</h5>
             </span>
-            <button>Edit</button>
-            <button>Delete</button>
+            <button id="editBu">Edit</button>
+            <button id="deleteBu">Delete</button>
           </div>
 
           <div class="part1">
@@ -47,8 +47,8 @@
               <p>Description of the Post</p>
               <h5>Date</h5>
             </span>
-            <button>Edit</button>
-            <button>Delete</button>
+            <button id="editBu">Edit</button>
+            <button id="deleteBu">Delete</button>
           </div>
         </div>
       </div>
