move from blog list ot edit blog with id

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>
           <a href="blog.html">Blog</a>
         </li>
-        <li>Content Us</li>
+        <li>Content Us</li>z
         <li>About Us</li>
       </ul>
     </div>
