--- a/CMS/editblog.html
+++ b/CMS/editblog.html
@@ -26,6 +26,6 @@
         </div>
       </div>
     </div>
-    <script src="../index.js"></script>
+    <script src="../jsFiles/editBlog.js"></script>
   </body>
 </html>
