created two js files

--- a/CMS/blogs.html
+++ b/CMS/blogs.html
@@ -10,8 +10,8 @@
     <div id="TableContainer">
       <div id="tableRow">
         <div id="LeftColumn">
-          <h2 id="bloglink">Blogs </h2>
-          <h2 id="blogevent">Events</h2>
+         <a href="blogs.html"><h2 id="bloglink">Blogs </h2></a> 
+         <a href="events.html"><h2 id="blogevent">Events</h2></a> 
         </div>
         <div id="RightColumn">
           <a href="createBlog.html"> <button class="mainbutton">NEW BLOG</button></a>
