--- a/CMS/editblog.html
+++ b/CMS/editblog.html
@@ -14,15 +14,11 @@
         </div>
         <div id="RightColumn">
           <h2>Blog</h2>
-          <input type="title" placeholder="Title" />
-          <input
-            class="description"
-            type="Des"
-            placeholder="Blog description... "
-          />
-          <input type="img" placeholder="Image URL" />
-          <button class="addbu">Edit</button>
-          <button class="cancelbu">Cancel</button>
+          <input class="Title" type="title" placeholder="Title" />
+          <input class="Dess" type="Des" placeholder="Blog description... " />
+          <input class="Img" type="img" placeholder="Image URL" />
+          <button class="editbu">Update</button>
+          <button class="backbu">Back</button>
         </div>
       </div>
     </div>
