fetch blog page and make link to work!

--- a/CMS/editevent.html
+++ b/CMS/editevent.html
@@ -14,17 +14,14 @@
         </div>
         <div id="RightColumn">
           <h2>Event</h2>
-          <input type="title" placeholder="Title" />
-          <input
-            class="description"
-            type="Des"
-            placeholder="Event description... "
-          />
-          <input type="img" placeholder="Image URL" />
-          <button class="addbu">Edit</button>
-          <button class="cancelbu">Cancel</button>
+          <input class="Title" type="title" placeholder="Title" />
+          <input class="Dess" type="Des" placeholder="Event description... " />
+          <input class="Img" type="img" placeholder="Image URL" />
+          <button class="editbu">Update</button>
+          <button class="backbu">Back</button>
         </div>
       </div>
     </div>
+    <script src="../jsFiles/editEvent.js"></script>
   </body>
 </html>
