--- a/CMS/events.html
+++ b/CMS/events.html
@@ -27,8 +27,8 @@
               <p>Description of the Post</p>
               <h5>Date</h5>
             </span>
-            <button>Edit</button>
-            <button>Delete</button>
+            <button id="editBu">Edit</button>
+            <button id="deleteBu">Delete</button>
           </div>
 
           <div class="part1">
@@ -38,8 +38,8 @@
               <p>Description of the Post</p>
               <h5>Date</h5>
             </span>
-            <button>Edit</button>
-            <button>Delete</button>
+            <button id="editBu">Edit</button>
+            <button id="deleteBu">Delete</button>
           </div>
 
           <div class="part1">
@@ -49,8 +49,8 @@
               <p>Description of the Post</p>
               <h5>Date</h5>
             </span>
-            <button>Edit</button>
-            <button>Delete</button>
+            <button id="editBu">Edit</button>
+            <button id="deleteBu">Delete</button>
           </div>
         </div>
       </div>
