--- a/blog.html
+++ b/blog.html
@@ -20,51 +20,67 @@
         <li>About Us</li>
       </ul>
     </div>
-
-    <div id="blog">
-      <div id="tableRow">
-        <div id="LeftColumn">
-          <img src="assets/workspace1.jpg" alt="imagerightcloumn" />
-        </div>
-        <div id="RightColumn">
-          <h1><a href="firstblog.html">The power of open work space</a></h1>
-          <p>
-            This is your blog post. Great looking images make your blog posts
-            more visually compelling for your audience, so choose media that
-            really wows. Adding fun an...
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div id="blog">
-      <div id="tableRow">
-        <div id="LeftColumn">
-          <img src="assets/workspace2.jpg" alt="imagerightcloumn" />
-        </div>
-        <div id="RightColumn">
-          <h1>How to create synergy in the workplace</h1>
-          <p>
-            This is your blog post. To really engage your site visitors we
-            suggest you blog about subjects that are related to your site or
-            business. Blogging is really...
-          </p>
+    <div class="card-container">
+      <div class="blog">
+        <div class="tableRow">
+          <div class="LeftColumn">
+            <img
+              class="Img"
+              src="assets/workspace1.jpg"
+              alt="imagerightcloumn"
+            />
+          </div>
+          <div class="RightColumn">
+            <h1 class="Title">
+              The power of open work space
+              <!-- <a href="firstblog.html">The power of open work space</a> -->
+            </h1>
+            <p class="Para">
+              This is your blog post. Great looking images make your blog posts
+              more visually compelling for your audience, so choose media that
+              really wows. Adding fun an...
+            </p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div id="blog">
-      <div id="tableRow">
-        <div id="LeftColumn">
-          <img src="assets/workspace.jpg" alt="imagerightcloumn" />
+      <div class="blog">
+        <div class="tableRow">
+          <div class="LeftColumn">
+            <img
+              class="Img"
+              src="assets/workspace2.jpg"
+              alt="imagerightcloumn"
+            />
+          </div>
+          <div class="RightColumn">
+            <h1 class="Title">How to create synergy in the workplace</h1>
+            <p class="Para">
+              This is your blog post. To really engage your site visitors we
+              suggest you blog about subjects that are related to your site or
+              business. Blogging is really...
+            </p>
+          </div>
         </div>
-        <div id="RightColumn">
-          <h1>Brainstorm how-to: the wall of ideas</h1>
-          <p>
-            This is your blog post. Blogs are a great way to connect with your
-            audience and keep them coming back. They can also be a great way to
-            position yourself as...
-          </p>
+      </div>
+
+      <div class="blog">
+        <div class="tableRow">
+          <div class="LeftColumn">
+            <img
+              class="Img"
+              src="assets/workspace.jpg"
+              alt="imagerightcloumn"
+            />
+          </div>
+          <div class="RightColumn">
+            <h1 class="Title">Brainstorm how-to: the wall of ideas</h1>
+            <p class="Para">
+              This is your blog post. Blogs are a great way to connect with your
+              audience and keep them coming back. They can also be a great way
+              to position yourself as...
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -76,5 +92,6 @@
       </ul>
       <p>©2020 by ReelTech. Proudly created by Halima</p>
     </div>
+    <script src="../jsFiles/fetchBlogPage.js"></script>
   </body>
 </html>
