--- a/index.html
+++ b/index.html
@@ -49,26 +49,7 @@
 
     <div id="section4">
       <h1>Upcoming Events</h1>
-      <div class="card1">
-        <img class="Img" src="assets/image1.jpg" alt="firstImage" />
-        <h2 class="Title">Event</h2>
-        <h3 class="Time">San Francisco, CA, USA</h3>
-        <button class="RSbu">RSVP</button>
-      </div>
-
-      <div class="card1">
-        <img class="Img" src="assets/image1.jpg" alt="secondImage" />
-        <h2 class="Title">Event</h2>
-        <h3 class="Time">San Francisco, CA, USA</h3>
-        <button class="RSbu">RSVP</button>
-      </div>
-
-      <div class="card1">
-        <img class="Img" src="assets/image1.jpg" alt="thirdImage" />
-        <h2 class="Title">Event</h2>
-        <h3 class="Time">San Francisco, CA, USA</h3>
-        <button class="RSbu">RSVP</button>
-      </div>
+      <!-- new cards will be add here form JS! -->
     </div>
 
     <div id="section5">
@@ -81,24 +62,7 @@
     </div>
 
     <div id="section6">
-      <div class="image11">
-        <img class="Img" src="assets/workspaceCopy2.png" alt="thirdImage" />
-        <h2 class="Title">The power of open work space</h2>
-      </div>
-
-      <div class="image11">
-        <img class="Img" src="assets/workspaceCopy1.png" alt="thirdImage" />
-        <h2 class="Title">
-          How to create synergy in the workplace
-        </h2>
-      </div>
-
-      <div class="image11">
-        <img class="Img" src="assets/workspaceCopy.jpg" alt="thirdImage" />
-        <h2 class="Title">
-          Brainstorm how-to: the wall of ideas
-        </h2>
-      </div>
+      <!-- bring it from JS! -->
     </div>
 
     <div id="footer">
