--- a/firstblog.html
+++ b/firstblog.html
@@ -23,8 +23,8 @@
     </div>
 
     <div id="firstblog">
-      <h1>The power of open work space</h1>
-      <p>
+      <h1 class="Title">The power of open work space</h1>
+      <p class="Para">
         This is your blog post. Great looking images make your blog posts more
         visually compelling for your audience, so choose media that really wows.
         Adding fun and compelling videos is another great way to engage your
@@ -38,7 +38,7 @@
         Twitter and view how many people have liked a post, made comments and
         more.
       </p>
-      <img src="assets/firstblog.jpg" alt="firstblog" />
+      <img class="Img" src="assets/firstblog.jpg" alt="firstblog" />
     </div>
 
     <div id="footer">
@@ -49,5 +49,6 @@
       </ul>
       <p>©2020 by ReelTech. Proudly created by Halima</p>
     </div>
+    <script src="./jsFiles/singleBlog.js"></script>
   </body>
 </html>
