--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <div id="header">
       <img src="assets/logo.gif" alt="logo" />
       <ul>
-        <li>Home</li>
+        <li>
+          <a href="#section1">Home</a>
+        </li>
         <li>
           <a href="blog.html">Blog</a>
         </li>
-        <li>Content Us</li>
-        <li>About Us</li>
+        <li><a href="#section5">Content Us</a></li>
+        <li><a href="#section3">About Us</a></li>
       </ul>
     </div>
     <div id="section1">
