--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
       <img src="assets/logo.gif" alt="logo" />
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li>Bolg</li>
+        <li>Blog</li>
         <li>Content Us</li>
         <li>About Us</li>
       </ul>
